Fix link alignment on /new (#7331), add conditional nav CTA (#7320)

--- a/media/css/firefox/new/trailhead/download.scss
+++ b/media/css/firefox/new/trailhead/download.scss
@@ -43,10 +43,13 @@ $image-path: '/media/protocol/img';
             border: none;
             color: #fff;
             cursor: pointer;
-            display: inline-block;
+            text-decoration: underline;
             margin: 0;
             padding: 0;
-            text-decoration: underline;
+
+            @media #{$mq-md} {
+                @include bidi(((text-align, left, right),));
+            }
 
             &:active,
             &:focus,
